tests/NormalTests/paczka1/small_fuzzy/97589919.err
Error in line 8: wBi9N A862 90,0
Error in line 9: yek A996 26,2
